ThirdParty/mojoshader/unit_tests/preprocessor/errors/too-many-macro-args.correct
preprocessor/errors/too-many-macro-args:3: ERROR: macro 'x' passed 2 arguments, but requires 1
